<resources>

    <string name="app_name">Xtreme final Calculator</string>

    <string name="txt_number_1">Digite o numero 1:</string>
    <string name="txt_number_2">Digite o numero 2:</string>
    <string name="edt_number_1">numero 1:</string>
    <string name="edt_number_2">numero 2:</string>
    <string name="btn_adicionar">+</string>
    <string name="btn_subtrair">-</string>
    <string name="btn_multiplicar">x</string>
    <string name="btn_dividir">%</string>
    <string name="resultado"></string>

</resources>
