<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1">

            <TextView
                style="@style/text_view"
                android:text="@string/txt_number_1" />

            <EditText
                android:id="@+id/number_one"
                style="@style/padrao"
                android:hint="@string/edt_number_1"
                android:inputType="number" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1">

            <TextView
                style="@style/text_view"
                android:text="@string/txt_number_2" />


            <EditText
                android:id="@+id/number_two"
                style="@style/padrao"
                android:hint="@string/edt_number_2"
                android:inputType="number" />

        </LinearLayout>

    </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_adicionar"
            style="@style/buttons"
            android:layout_weight="0.25"
            android:text="@string/btn_adicionar" />

        <Button
            android:id="@+id/btn_subtrair"
            style="@style/buttons"
            android:layout_weight="0.25"
            android:text="@string/btn_subtrair" />

        <Button
            android:id="@+id/btn_multiplicar"
            style="@style/buttons"
            android:layout_weight="0.25"
            android:text="@string/btn_multiplicar" />

        <Button
            android:id="@+id/btn_dividir"
            style="@style/buttons"
            android:layout_weight="0.75"
            android:text="@string/btn_dividir" />

    </LinearLayout>
    <TextView style="@style/padrao"
        android:id="@+id/resultado"/>
</LinearLayout>